syntax = "proto3";
option csharp_namespace = "GrpcDemo.Server.Protos";

import "google/protobuf/timestamp.proto";
//import "enums.proto";

message TrackingMessage{
	int32 deviceId = 1;
	int32 speed = 2;
	Location location = 3;
	repeated Sensor Sensors = 4;
	google.protobuf.Timestamp messageDate = 5;
}

message Sensor{
	string key = 1;
	string value = 2;
}

message Location{
	double lat = 1;
	double log = 2;
}

message TrackingResponse{
	bool success = 1;
}

message PulseMessage{
	int32 clientId = 1;
	ClientStatus clientStatus = 2;
	google.protobuf.Timestamp messageDate = 3;
}

message NotificationMessage{
	int32 deviceId = 1;
	google.protobuf.Timestamp subscriptionDate = 2;
}

message NotificationResponse{
	string notificationHeader = 1;
	string notificationBody = 2;
	google.protobuf.Timestamp notificationDate = 3;
}

//enums
enum ClientStatus{
	INVALID = 0;
	ACTIVE = 1;
	FAILURE = 2;
}